Bug 1635716 - Remove pending gUM requests on navigation. r=ng a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D75632